--- a/theme/tufte.scss
+++ b/theme/tufte.scss
@@ -58,7 +58,7 @@ h2 { font-style: italic; }
 pre {
   background-color: $code-bg;
   border-left: 3px solid $link-color;
-  padding: 0.5rem 0.75rem;
+  padding: 0.5rem;
   overflow-x: auto;
 }
 
@@ -66,10 +66,8 @@ pre code {
   white-space: pre;
   word-wrap: normal;
   overflow-wrap: normal;
-  padding-left: 0;
 }
 
-// Fix wrapped code lines - disable wrap to use scroll instead
 div.sourceCode {
   overflow-x: auto;
 }
@@ -79,31 +77,23 @@ div.sourceCode pre {
   white-space: pre;
 }
 
-// Compact line numbers
+// Compact line numbers - minimal spacing
 pre > code.sourceCode {
   padding-left: 0 !important;
   margin-left: 0 !important;
 }
 
 pre > code.sourceCode > span {
-  padding-left: 0.5em !important;
-  text-indent: -0.5em;
-  margin-left: 0.5em;
+  padding-left: 2em !important;
 }
 
-// Line number styling
 pre > code.sourceCode > span > a:first-child::before {
   text-align: right;
   display: inline-block;
-  width: 2.5em;
-  padding-right: 0.5em;
-  margin-right: 0.5em;
-  border-right: 1px solid #ccc;
-}
-
-div.sourceCode {
-  margin-left: 0 !important;
-  padding-left: 0 !important;
+  width: 1.5em;
+  padding-right: 0.3em;
+  margin-left: -2em;
+  color: #999;
 }
 
 // Links
